# konica-minolta-printer-middleware

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_UNIVERSAL.md  USAGE.md  admin_login_response.html  instructions.md  pyproject.toml  requirements.txt  start_middleware.sh  stop_server.py  test_config_modes.py  test_discovery.py  test_server.py
mac/: install.sh  start_tray.sh  test_tray.sh  uninstall.sh
src/konika_middleware/: __init__.py
src/konika_middleware/api/: __init__.py  main.py
src/konika_middleware/api/routers/: __init__.py  devices.py  health.py  jobs.py  remote.py
src/konika_middleware/core/: __init__.py  device_manager.py  discovery.py  exceptions.py  remote_client.py
src/konika_middleware/devices/: __init__.py  base_adapter.py  fiery_adapter.py  fiery_client.py  km_2100.py  km_c654e.py  km_c754e.py  km_c759.py  snmp_client.py
src/konika_middleware/models/: __init__.py  config.py  device.py  job.py
tests/: investigate_missing_machines.py  test_api_simple.py  test_device.py  test_fiery_detection.py  test_real_machines.py  test_your_config.py  verify_working.py
win/: install.bat  start_tray.bat  test_tray.bat  uninstall.bat
